[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttykit"
version = "0.1.3"
description = "Helping made beatiful out in terminal"
authors = [{ name = "He-STALIN", email = "hene.stalin@gmail.com" }]
license = { text = "MIT" }
#readme = "README.md" пока нету
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/He-STALIN/ttykit"