[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ttykit*"]

[project]
name = "ttykit"
version = "0.2.2"
description = "Helping made beatiful out in terminal"
requires-python = ">=3.13"
authors = [
    { name = "He-STALIN"}, 
    {email = "hene.stalin@gmail.com"}
    ]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['tty', 'terminal', 'formatting']
dependencies = []

[project.scripts]
ttykit-spinner = "ttykit.spinner:main"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/He-STALIN/ttykit"
BugTracker = "https://github.com/He-STALIN/ttykit/issues"